# get_3D_Volume

./: .gitignore  .~lock.colmap.txt#  README.md  get_K.py  get_plane.py  get_volume.py  pre_z.txt  start.sh
Ceres/: CMakeLists.txt  abc.cpp  kabc.cpp
TEST/: process_point.py  process_pointcloud.py  start.sh  test.py
TEST/C++/: CMakeLists.txt  abc.cpp  detect.cpp  pointcloud.cpp
TEST/Data/: abc.txt  calibration.yml  cloud_cut.ply  cloud_filter.ply  marker_corner.txt  marker_corner_new.txt  mba.txt  plane.txt  setting.yml  test.py
TEST/text/: abc.txt  calibration.yml  cloud_filter.ply  cloud_resize.ply  markerAndFar.txt  marker_corner.txt  marker_corner_new.txt  plane.txt  point_R.ply  point_R.txt  setting.yml  world_resize.ply  worldply.ply  xyzrgb.txt
detect_opencv/: CMakeLists.txt  detect.cpp
pcl/: CMakeLists.txt  add_plane.cpp  read_ply.cpp
pcl_app/: recon_poisson.cpp
test/Projection/: CMakeLists.txt  test.cpp
test/SIFT/: CMakeLists.txt  test.cpp
test/mba-master/: 2d.cpp  2d_execute.cpp  CMakeLists.txt
